--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Kingbus ERP</title>
-    <link href="{% static 'css/basic_form.css' %}" rel="stylesheet" type="text/css" />
+    <link href="{% static 'css/base.css' %}" rel="stylesheet" type="text/css" />
     <link href="{% static 'css/main_page.css' %}" rel="stylesheet" type="text/css" />
     {% block head %}
     {% endblock %}
