--- a/notice/templates/notice/detail.html
+++ b/notice/templates/notice/detail.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block head %}
-<link rel="stylesheet" href="{% static 'css/notice.css' %}" type="text/css" />
+<link rel="stylesheet" href="{% static 'css/notice/notice.css' %}" type="text/css" />
 {% endblock %}
 
 {% block content %}
