--- a/notice/templates/notice/edit.html
+++ b/notice/templates/notice/edit.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block head %}
-<link rel="stylesheet" href="{% static 'css/notice.css' %}" type="text/css" />
+<link rel="stylesheet" href="{% static 'css/notice/notice.css' %}" type="text/css" />
 {% endblock %}
 
 {% block content %}
@@ -28,7 +28,7 @@
     <section class="main_section">
         <div class="notice_section_box">
             <div class="top_box">
-                <div class="top_box_title">공지사항 작성</div>
+                <div class="top_box_title">공지사항 수정</div>
             </div>
 
             <div class="mid_box">
