--- a/static/css/notice/notice_kinds.css
+++ b/static/css/notice/notice_kinds.css
@@ -5,8 +5,8 @@ a{
 .top_box_selectANDsearch{
   display: flex;
   align-items: center;
-  position: relative;
-  right: -13rem;
+  position: absolute;
+  right: 0rem;
 }
 
 .top_box_select_box{
@@ -18,7 +18,8 @@ a{
   border: 0.1rem solid #B41515;
   border-radius: 0.5rem;
   padding: 0.5rem;
-  font-size: 1.7rem;
+  font-size: 1.5rem;
+  line-height: 3rem;
 }
 .top_box_input_text{
   padding: 0.2rem 1rem 0.2rem 1rem;
