--- a/accounting/templates/accounting/outlay_detail.html
+++ b/accounting/templates/accounting/outlay_detail.html
@@ -1,8 +1,179 @@
-outlay detail
+{% extends 'base.html' %}
+{% load static %}
 
-<p>지급구분 : {{ outlay.kinds }}</p>
-<p>적요 : {{ outlay.brief }}</p>
-<p>지출금액 : {{ outlay.price }}</p>
-<p>지출일자 : {{ outlay.outlay_date }}</p>
-<p>작성자 : {{ outlay.creator.name }}</p>
-<p>작성시간 : {{ outlay.pub_date | date:'Y-m-d'}}</p>
+
+{% block head %}
+    <link href="{% static 'css/accounting/outlay.css' %}" rel="stylesheet" type="text/css">
+{% endblock %}
+
+{% block content %}
+
+<div class="main_box outlay_detaillist__main_box">
+    <aside>
+        <div class="aside_box">
+            <div class="aside_title">
+                <div class="aside_title_font">경리</div>
+            </div>
+            <div class="aside_contents">
+                <a href="{% url 'accounting:income_list' %}">수입현황</a>
+            </div>
+            <div class="aside_contents">
+                <a href="{% url 'accounting:outlay_list' %}">지출현황</a>
+            </div>
+            <div class="aside_contents">
+                <a href="{% url 'accounting:outlay_create' %}">지출작성</a>
+            </div>
+            <div class="aside_contents">
+                <a href="{% url 'accounting:salary_list' %}">급여현황</a>
+            </div>
+            <div class="aside_contents">
+                <a href="{% url 'accounting:salary_create' %}">급여작성</a>
+            </div>
+        </div>
+    </aside>
+
+    <section class="main_section">
+        <div class="top_box">
+            <div class="top_box_title">{{ date.0 }}{{ date.1 }}{{ date.2 }}{{ date.3 }}년 {{date.5}}{{date.6}}월 {{date.8}}{{date.9}}일 지출현황</div>
+        </div>
+        <div class="outlay_detail__mid_box">
+            <div class="outlay_list__mid_box_head">
+                <div class="outlay_list__mid_box_head__box">
+                    <div class="outlay_list__mid_box_head__box_title">급여</div>
+                    <div class="outlay_list__mid_box_head__box_value">급여부분 하고 수정</div>
+                </div>
+                <div class="outlay_list__mid_box_head__box">
+                    <div class="outlay_list__mid_box_head__box_title">차량</div>
+                    <div class="outlay_list__mid_box_head__box_value">{{car}}</div>
+                </div>
+                <div class="outlay_list__mid_box_head__box">
+                    <div class="outlay_list__mid_box_head__box_title">복리후생</div>
+                    <div class="outlay_list__mid_box_head__box_value">{{welfare}}</div>
+                </div>
+                <div class="outlay_list__mid_box_head__box">
+                    <div class="outlay_list__mid_box_head__box_title">운영</div>
+                    <div class="outlay_list__mid_box_head__box_value">{{company}}</div>
+                </div>
+                <div class="outlay_list__mid_box_head__box">
+                    <div class="outlay_list__mid_box_head__box_title">기타</div>
+                    <div class="outlay_list__mid_box_head__box_value">{{other}}</div>
+                </div>
+                <div class="outlay_list__mid_box_head__box">
+                    <div class="outlay_list__mid_box_head__box_title">총 지출</div>
+                    <div class="outlay_list__mid_box_head__box_value">{{total}}</div>
+                </div>
+            </div>
+
+
+
+            <div class="outlay_detail__mid_content">
+                <div class="outlay_detail_mid_content__title">차량관련 지출</div>
+                <div class="outlay_detail_mid_content__header">
+                    <div class="outlay_detail_mid_content__header_title">지출금액</div>
+                    <div class="outlay_detail_mid_content__header_title">적요</div>
+                    <div class="outlay_detail_mid_content__header_title">작성자</div>
+                    <div class="outlay_detail_mid_content__header_title">작성시간</div>
+                    <div class="outlay_detail_mid_content__header_title">수정/삭제</div>
+                </div>
+                
+                {% for i in outlay %}
+                    {% if i.kinds == "차량" %}
+                        <div class="outlay_detail_mid_kinds__content_box">
+                            <div class="outlay_detail_mid_kinds__contents_box__content">{{i.price}}</div>
+                            <div class="outlay_detail_mid_kinds__contents_box__content">{{i.brief}}</div>
+                            <div class="outlay_detail_mid_kinds__contents_box__content">{{i.creator}}</div>
+                            <div class="outlay_detail_mid_kinds__contents_box__content">{{i.pub_date | date:'Y.m.d H:s'}}</div>
+                            <div class="outlay_detail_mid_kinds__contents_box__content">
+                                <a href="{% url 'accounting:outlay_edit' i.id %}">수정</a>
+                                <span>/</span>
+                                <a href="{% url 'accounting:outlay_delete' i.id %}">삭제</a>
+                            </div>
+                        </div>
+                    {% endif %}
+                {% endfor %}
+            </div>       
+            
+            <div class="outlay_detail__mid_content">
+                <div class="outlay_detail_mid_content__title">복리후생관련 지출</div>
+                <div class="outlay_detail_mid_content__header">
+                    <div class="outlay_detail_mid_content__header_title">지출금액</div>
+                    <div class="outlay_detail_mid_content__header_title">적요</div>
+                    <div class="outlay_detail_mid_content__header_title">작성자</div>
+                    <div class="outlay_detail_mid_content__header_title">작성시간</div>
+                    <div class="outlay_detail_mid_content__header_title">수정/삭제</div>
+                </div>
+                
+                {% for i in outlay %}
+                    {% if i.kinds == "복리후생" %}
+                        <div class="outlay_detail_mid_kinds__content_box">
+                            <div class="outlay_detail_mid_kinds__contents_box__content">{{i.price}}</div>
+                            <div class="outlay_detail_mid_kinds__contents_box__content">{{i.brief}}</div>
+                            <div class="outlay_detail_mid_kinds__contents_box__content">{{i.creator}}</div>
+                            <div class="outlay_detail_mid_kinds__contents_box__content">{{i.pub_date | date:'Y.m.d H:s'}}</div>
+                            <div class="outlay_detail_mid_kinds__contents_box__content">
+                                <a href="{% url 'accounting:outlay_edit' i.id %}">수정</a>
+                                <span>/</span>
+                                <a href="{% url 'accounting:outlay_delete' i.id %}">삭제</a>
+                            </div>
+                        </div>
+                    {% endif %}
+                {% endfor %}
+            </div>       
+            <div class="outlay_detail__mid_content">
+                <div class="outlay_detail_mid_content__title">운영관련 지출</div>
+                <div class="outlay_detail_mid_content__header">
+                    <div class="outlay_detail_mid_content__header_title">지출금액</div>
+                    <div class="outlay_detail_mid_content__header_title">적요</div>
+                    <div class="outlay_detail_mid_content__header_title">작성자</div>
+                    <div class="outlay_detail_mid_content__header_title">작성시간</div>
+                    <div class="outlay_detail_mid_content__header_title">수정/삭제</div>
+                </div>
+                
+                {% for i in outlay %}
+                    {% if i.kinds == "운영" %}
+                        <div class="outlay_detail_mid_kinds__content_box">
+                            <div class="outlay_detail_mid_kinds__contents_box__content">{{i.price}}</div>
+                            <div class="outlay_detail_mid_kinds__contents_box__content">{{i.brief}}</div>
+                            <div class="outlay_detail_mid_kinds__contents_box__content">{{i.creator}}</div>
+                            <div class="outlay_detail_mid_kinds__contents_box__content">{{i.pub_date | date:'Y.m.d H:s'}}</div>
+                            <div class="outlay_detail_mid_kinds__contents_box__content">
+                                <a href="{% url 'accounting:outlay_edit' i.id %}">수정</a>
+                                <span>/</span>
+                                <a href="{% url 'accounting:outlay_delete' i.id %}">삭제</a>
+                            </div>
+                        </div>
+                    {% endif %}
+                {% endfor %}
+            </div>       
+            <div class="outlay_detail__mid_content">
+                <div class="outlay_detail_mid_content__title">기타 지출</div>
+                <div class="outlay_detail_mid_content__header">
+                    <div class="outlay_detail_mid_content__header_title">지출금액</div>
+                    <div class="outlay_detail_mid_content__header_title">적요</div>
+                    <div class="outlay_detail_mid_content__header_title">작성자</div>
+                    <div class="outlay_detail_mid_content__header_title">작성시간</div>
+                    <div class="outlay_detail_mid_content__header_title">수정/삭제</div>
+                </div>
+                
+                {% for i in outlay %}
+                    {% if i.kinds == "기타" %}
+                        <div class="outlay_detail_mid_kinds__content_box">
+                            <div class="outlay_detail_mid_kinds__contents_box__content">{{i.price}}</div>
+                            <div class="outlay_detail_mid_kinds__contents_box__content">{{i.brief}}</div>
+                            <div class="outlay_detail_mid_kinds__contents_box__content">{{i.creator}}</div>
+                            <div class="outlay_detail_mid_kinds__contents_box__content">{{i.pub_date | date:'Y.m.d H:s'}}</div>
+                            <div class="outlay_detail_mid_kinds__contents_box__content">
+                                <a href="{% url 'accounting:outlay_edit' i.id %}">수정</a>
+                                <span>/</span>
+                                <a href="{% url 'accounting:outlay_delete' i.id %}">삭제</a>
+                            </div>
+                        </div>
+                    {% endif %}
+                {% endfor %}
+            </div>       
+        </div>
+        <div class="blank"></div>
+    </section>
+
+
+{% endblock %}
